fix image overflow

--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow-x: hidden;
 }
 
 .section-content {
